# anonymizer_task

./: .gitignore  CMakeLists.txt  README.md  REPORT.md  docker-compose.override.yml  docker-compose.yml
docker/anonymizer/: Dockerfile
docker/ch-proxy/: chproxy.yml  nginx.conf
docker/clickhouse/: init.sh
docker/http-log-kafka-producer/: Dockerfile  entrypoint.sh
etc/clickhouse/: 01_schema.sql
etc/jmx_exporter/: config_kafka.yml
etc/prometheus/: prometheus.yml
grafana/dashboards/: http_log_overview.json  http_logs_dashboard.json
grafana/provisioning/datasources/: clickhouse.yaml
src/: anonymizer.cpp  anonymizer.h  http_log.capnp  main.cpp  util.cpp  util.h
tests/: test_capnp.cpp  test_util.cpp
tests/e2e/: test_full.sh
tests/integration/: anonymizer_to_clickhouse.sh  clickhouse_latency_quantiles.sh  kafka_failure.sh  kafka_to_anonymizer.sh  prometheus_kafka_metrics.sh
